Edited wiki page DoorInstallation through web user interface.

--- a/wiki/DoorInstallation.wiki
+++ b/wiki/DoorInstallation.wiki
@@ -13,9 +13,9 @@ The basic requirement for any electronic access control system is that you be ab
 
   * Residential deadbolts. This would be your typical Kwikset or Schlage lock set as found in most homes in North America. They usually mount in a 2.25" hole. Options for electrifying these include special door strikes that will push in and release the latch, surface-mounted hardware that does not use the installed lock, and modified [http://www.google.com/search?q=schlage+keyless "keyless entry"] sets available from hardware stores. Modifying one of these consists of opening it up, finding the solenoid, and soldering wires to it. You can run the wires through the door or via a piece of flex cable to your panel. A 3-6V power source (to match the battery supply) will be needed.
 
-  * Commercial doors with mortise locks. These can be identified as the type of door where most of the hardware is embedded in a large pocket that has been machined into the edge of the door, leaving only a handle and a small round lock cylinder visible. Common brands are Sargent, Adams Rite, and the professional lines from Schlage.  A commercial lock catalog will have many variations of these.
+  * Commercial doors with mortise locks. These can be identified as the type of door where most of the hardware is embedded in a large pocket in the door edge. The only bits you may see from the outside are a small round lock cylinder and some type of handle. Common brands are Sargent, Adams Rite, and the professional lines from Schlage.  A commercial lock catalog will have many variations of electric hardware for these.
 
-  * Glass store front doors. The majority of retail and office spaces in the U.S. come equipped with an Aluminum-frame door containing an Adams-Rite mortise deadbolt or dead latch. There is specific hardware available from the manufacturer for this.
+  * Glass store front doors. The majority of retail and office space in the U.S. comes equipped with an Aluminum-frame door containing an Adams-Rite mortise deadbolt or dead latch. There is specific hardware available from the manufacturer for this.
 
   * Other types of doors. A common way to electrify anything else (interior doors, doors where you do not have access to the door frame to run a strike or wires) is a door magnet. These are large electromagnets that are typically bolted into the top of the door and are rated for 1000-2500lbs holding force. When energized, they keep the door shut. They are also "fail secure," meaning that the door will open when power is interrupted. This can be a good thing for a fire exit, but may not be a good thing for a secure area.
 
