--- a/wiki/BuildTips.wiki
+++ b/wiki/BuildTips.wiki
@@ -75,9 +75,8 @@ Congratulations, you're done!
   * Version 2.00 and 2.10 of the hardware require that the LM-2575 regulator be installed with a mica insulator underneath the heat sink or mounting tab. Failing to install this part could result in a 5V short.
   * All parts on the v2.10 and 2.11 layouts have been tested with an actual build. If detachable screw terminals such as the Phoenix 5mm Fixed Terminal Block parts are to be used. the diameter of the holes needs to be increased to at least .055".
   * The design can be adapted for 24V use. The following parts must be changed if a 24V supply voltage is to be used: 
-    * 24V coil relays
-    * 50V MOV 
-    * 30V TVS diode 
+    * 24V coil relays (G5LE-14 DC24 or Digikey part #Z1013-ND)
+    * 30V TVS diode  (1.5KE30A)
     * 4.7K resistors for relay LEDs
     * 10K resistors on inputs in 24V signals are used.
 
