--- a/wiki/HardwareTips.wiki
+++ b/wiki/HardwareTips.wiki
@@ -29,6 +29,8 @@ See the [DoorInstallation Wiki Page] for more information on door hardware.
 
   * RFID, PIN pads or other access readers. Look for [http://en.wikipedia.org/wiki/Wiegand_interface Wiegand] interface door readers. The HID brand is the most widely deployed for buildings, but is proprietary and expensive. The open-standards alternative is EM4100, which is available in abundance on [http://shop.ebay.com/?_from=R40&_trksid=p5197.m570.l1313&_nkw=EM4100&_sacat=See-All-Categories eBay] or from Internet shops. Wiegand stuff is usually good for up to 500 feet of cable run  if you use shielded cable. You could also use RS232-based readers, but we have not tested this.
 
+Note: The system is compatible with readers from [http://www.hidglobal.com/ HID Corporation].  The Wiegand pulses sent from these readers may be too fast for the opto-isolation circuit in this hardware. If your HID readers will not work, solder a 0.15uF - 0.33uF capacitor between each READER input line and ground. 
+
   * A key bypass. Since you will likely be tinkering with the code and "stuff" happens, it is advisable to have an alternate way into your space. Some suggestions including leaving a secondary door available for key access and/or installing electric hardware that includes a keyed cylinder.
 ----
 ==Safety Considerations==
