--- a/wiki/LinuxMonitoring.wiki
+++ b/wiki/LinuxMonitoring.wiki
@@ -6,7 +6,7 @@
 =This page explains how to set up a Sheevaplug embedded PC for monitoring the Open Access Control.=
 
 Updated 9/25/2011
-Tutorial based on the ]http://www.plugcomputer.org/ Sheevaplug PC] from [http://www.globalscaletechnologies.com Globalscale Technologies] and [http://www.armedslack.org ArmedSlack Linux v13.37].
+Tutorial based on the [http://www.plugcomputer.org/ Sheevaplug PC] from [http://www.globalscaletechnologies.com Globalscale Technologies] and [http://www.armedslack.org ArmedSlack Linux v13.37].
 
 1. Download ArmedSlack v13.37 using these instructions:
 http://www.armedslack.org/doku.php?id=getslack
